# Lumen

./: README.md  docker-compose.yml
.cursor/: mcp.json
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py
backend/app/routers/: health.py
backend/tests/: test_health.py
documentation/: BACKEND-IMPLEMENTATION-PLAN.md
lumen/: package-lock.json  package.json  vite.config.ts
lumen/src/: App.tsx  index.css
lumen/src/components/: FocusTimerMiniWidget.tsx  TTSPanel.tsx
lumen/src/contexts/: TimerContext.tsx
lumen/src/pages/: FocusTimerPage.tsx  Home.tsx  NoteTaker.tsx
