[project]
name = "lumen-api"
version = "0.1.0"
description = "Lumen FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
